--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "10.4.14",
+    "firebase": "^10.2.0",
     "next": "13.4.13",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "tailwind-scrollbar": "^3.0.5"
   }
 }
